--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "BLACK-HUNTER MD BOT",
   "description": "A Whatsapp md bot built in NodeJs to make experience better",
-  "logo": "https://i.imgur.com/NpA3ZsJ.jpeg",
+  "logo": "https://telegra.ph/file/a267bb4341e4a11e42eb9.jpg",
   "keywords": ["whatsappbot", "BLACKHUNTER", "BLACK HUNTER Wa bot", "BLACK-HUNTER", "BLACKHUNTERWhatsaooBot", "BLACKHUNTERWaBot","BLACKHUNTER","BLACK HUNTER Whatsapp Bot","multi device"],
   "success_url": "/",
   "stack": "container",
