--- a/app.json
+++ b/app.json
@@ -22,6 +22,11 @@
     "description": "Put HEROKU APP NAME same as above.",
      "required" :false
     },
+    "AUTO_READ_STATUS": {
+    "description": "Fill the value true if you want bot view your Statuses.",
+    "required" :false,
+    "value": "true"
+    },
     "ANTI_BAD_WORD": {
     "description": "Put words here. If you want it enabled in your bot otherwise leave it blank",
      "required" :false
