--- a/sample-config.env
+++ b/sample-config.env
@@ -2,7 +2,7 @@
 SESSION_ID=
 MONGO_URI=
 OWNER_NUMER=
-THUMB_IMAGE = "https://raw.githubusercontent.com/SecktorBot/Brandimages/main/logos/SocialLogo%201.png"
+THUMB_IMAGE = "https://telegra.ph/file/12fd4796807a723c0a0c1.jpg"
 port = 5000
 emil = "Sachinthatharusha159@gmail.com "
 AUTO_BIO=false
