--- a/app.json
+++ b/app.json
@@ -56,11 +56,12 @@
      "required" :false,
      "value": "true"
     },
-   "DISABLE_PM": {
-    "description": "Disable bot in pm",
-     "required" :false
+     "DISABLE_PM": {
+    "description": "Disable bot in pm, Take it false if you wanna run bot in your pm",
+    "value": "false",
+    "required" :false
     },
-      "PREFIX": {
+    "PREFIX": {
   "description": "Enter your desired prefix for bot.",
       "value": "."
   },
