--- a/app.json
+++ b/app.json
@@ -22,17 +22,9 @@
     "description": "Put HEROKU APP NAME same as above.",
      "required" :false
     },
-   "ALIVE_IMAGE": {
-   "description": "THUMBNAIL for bot.",
-   "value": "https://telegra.ph/file/a267bb4341e4a11e42eb9.jpg"
-    },
-   "ALIVE_MESSAGE": {
-     "description": "Alive message for bot",
-     "required" :false
-    },
-    "ALWAYS_ONLINE": {
+   "ALWAYS_ONLINE": {
     "description": "Take it 'true' if you wanna show Always Onlline",
-    "value": "false",
+    "value": "true",
     "required" :false
     },
     "AUTO_READ_STATUS": {
@@ -43,6 +35,7 @@
     "ANTI_BAD_WORD": {
     "description": "Put words here. If you want it enabled in your bot otherwise leave it blank",
      "required" :false
+    "value": "sex,xxx",
     },
    "ANTILINK_VALUES": {
     "description": "Put words for antilink",
@@ -57,16 +50,16 @@
   "LEVEL_UP_MESSAGE": {
     "description": "Fill the value true if you want bot send Level up message in chat.",
      "required" :false,
-     "value": "true"
+     "value": "false"
     },
       "READ_MESSAGE": {
     "description": "Fill the value true if you want bot to read all messages.",
      "required" :false,
-     "value": "true"
+     "value": "false"
     },
      "DISABLE_PM": {
     "description": "Disable bot in pm, Take it false if you wanna run bot in your pm",
-    "value": "false",
+    "value": "true",
     "required" :false
     },
     "PREFIX": {
