--- a/app.json
+++ b/app.json
@@ -84,11 +84,11 @@
   },
     "THEME": {
     "description": "Put the theme name you want to use. ",
-     "value": "BLACK-HUNTER"
+     "value": "BLACK-HUNTER MD"
   },
-    "WORKTYPE": {
-  "description": "Worktype of your bot. Use public or private, if it is private then only bot number can use it. If public then everyone can use it.",
-         "value": "public"
+    "MODE": {
+    "description": "Worktype of your bot. Use public or private, if it is private then only bot number can use it. If public then everyone can use it.",
+    "value": "private"
   },
       "AUTO_REACTION": {
     "description": "Reacts emoji to all commands.",
