--- a/app.json
+++ b/app.json
@@ -46,7 +46,7 @@
     },
    "ANTILINK_VALUES": {
     "description": "Put words for antilink",
-     "value": "chat.whatsapp.com,fb.com,instagram.com",
+     "value": "chat.whatsapp.com,",
      "required" :false
     },
      "ANTILINK_ACTION": {
