--- a/app.json
+++ b/app.json
@@ -1,44 +1,39 @@
 {
-  "name": "BLACK-HUNTER MD",
+  "name": "BLACK-HUNTER MD BOT",
   "description": "A Whatsapp md bot built in NodeJs to make experience better",
   "logo": "https://telegra.ph/file/a267bb4341e4a11e42eb9.jpg",
-  "keywords": ["nodejs", "bot", "whatsapp bot", "Zero-Two", "SecktorBot", "Secktor","SecktorMD","theme bot","multi device","baileys","Sam Pandey"],
+  "keywords": ["whatsappbot", "BLACKHUNTER", "BLACK HUNTER Wa bot", "BLACK-HUNTER", "BLACKHUNTERWhatsaooBot", "BLACKHUNTERWaBot","BLACKHUNTER","BLACK HUNTER Whatsapp Bot","multi device"],
   "success_url": "/",
   "stack": "container",
 "env": {
   "OWNER_NAME": {
   "description": "Name of Bot Owner",
-      "value": "ᴍʀ-ꜱᴀᴄʜɪʏᴀ"
+      "value": "MR-SACHIYA"
   },
-  "ALIVE_MESSAGE": {
-    "description": "Alive message for bot",
-     "required" :true
-    },
-   "AUTO_READ_STATUS": {
-    "description": "Fill the value true if you want bot view your Statuses.",
-    "required" :true,
-    "value": "true"
-    },
-    "ALWAYS_ONLINE": {
-    "description": "Take it 'true' if you wanna show Always Onlline",
-    "value": "false",
-    "required" :false
-    },
     "AUTO_STATUS_SAVER": {
       "description": "Automatically saves status of every person and sends in log number.",
        "required" :false
       },
-    "HEROKU_APP_NAME": {
+    "HEROKU_API_KEY": {
+    "description": "Put HEROKU API KEY",
+     "required" :false
+    },
+  "HEROKU_APP_NAME": {
     "description": "Put HEROKU APP NAME same as above.",
      "required" :false
     },
-   "ANTI_BAD_WORD": {
+    "AUTO_READ_STATUS": {
+    "description": "Fill the value true if you want bot view your Statuses.",
+    "required" :false,
+    "value": "true"
+    },
+    "ANTI_BAD_WORD": {
     "description": "Put words here. If you want it enabled in your bot otherwise leave it blank",
      "required" :false
     },
    "ANTILINK_VALUES": {
     "description": "Put words for antilink",
-     "value": "chat.whatsapp.com,",
+     "value": "chat.whatsapp.com",
      "required" :false
     },
      "ANTILINK_ACTION": {
@@ -57,9 +52,8 @@
      "value": "true"
     },
    "DISABLE_PM": {
-    "description": "Disable bot in pm, Take it false if you wanna run bot in your pm",
-    "value": "false",
-    "required" :false
+    "description": "Disable bot in pm",
+     "required" :false
     },
       "PREFIX": {
   "description": "Enter your desired prefix for bot.",
@@ -70,7 +64,7 @@
        "value": "94760007746"
   },
    "SESSION_ID": {
-    "description": "Please put your SESSION_ID here,if you don't have visit https://secktorbot.herokuapp.com/session "
+    "description": "Please put your SESSION_ID here,if you don't have visit https://rowdy-baby-qr-94d785f490a0.herokuapp.com "
   },
     "OPENAI_API_KEY": {
     "description": "Please put your OPENAI api key here.Get it from beta.openai.com ",
@@ -82,7 +76,7 @@
     "value": "mongodb://uijlnjanwwtok9huotuz:O6aZrtz68pox7WolLfv@bhnvvvb88m0avzvaoawp-mongodb.services.clever-cloud.com:2327/bhnvvvb88m0avzvaoawp"
   },
     "THEME": {
-    "description": "Put the theme name you want to use. Avilable themes are SECKTOR,ZEROTWO,NEZUKO,LUFFY,GOKU and many more..",
+    "description": "Put the theme name you want to use. ",
      "value": "BLACK-HUNTER"
   },
     "WORKTYPE": {
